# foundation

./: .gitignore  CLAUDE.md  EXPERIMENTS.md  NEXT_STEPS.md  PYARTS_LUT.md  SpectralNP_slides.html  demo.ipynb  demo_executed.ipynb  pyproject.toml  train_demo.py
benchmarks/results/best_2026-04-08_06-00/: results.json  summary.md
benchmarks/results/best_2026-04-12_10-28/: results.json  summary.md
benchmarks/results/best_2026-04-14_10-54/: results.json  summary.md
benchmarks/results/epoch_100_2026-04-09_15-55/: results.json  summary.md
benchmarks/results/epoch_100_2026-04-09_16-30/: results.json  summary.md
benchmarks/results/epoch_50_2026-04-10_02-31/: results.json  summary.md
benchmarks/results/epoch_70_2026-04-09_13-40/: results.json  summary.md
checkpoints/pca_vae_swir/: best.pt  epoch_100.pt  epoch_150.pt  epoch_200.pt  epoch_250.pt  epoch_300.pt  epoch_50.pt  final.pt
scripts/: augment_usgs_to_lwir.py  benchmark_monitor.sh  build_lut.py  convergence_test.py  finetune_feature_weight.sh  generate_atm_pool.py  generate_lwir_library.py  iterate.sh  run_benchmarks.py  training_watchdog.py  validate_stage1.py  validate_stage2.py  validate_training_data.py
src/spectralnp/: __init__.py
src/spectralnp/benchmarks/: __init__.py  data.py  material.py  metrics.py  radiance.py  reflectance.py  report.py
src/spectralnp/data/: dataset.py  envi_sli.py  lut.py  lwir_dataset.py  random_sensor.py  rtm_simulator.py  sensor_definitions.py  srf.py  synthetic_lwir.py  (+2 more)
tests/: test_benchmarks.py  test_data_pipeline.py  test_evaluation.py  test_lut.py  test_model.py
(+15 files in other folders)
