[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spectralnp"
version = "0.1.0"
description = "Sensor-agnostic spectral foundation model with calibrated uncertainty"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "numpy>=1.24",
    "scipy>=1.11",
    "h5py>=3.9",
    "pyyaml>=6.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
arts = ["pyarts>=2.6"]
train = [
    "wandb>=0.16",
    "lightning>=2.1",
]
dev = [
    "pytest>=7.4",
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 99
